--- a/abe/package.json
+++ b/abe/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-svg": "15.12.1"
+    "react-native-svg": "15.12.1",
+    "expo-document-picker": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
