--- a/abe/package.json
+++ b/abe/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "^54.0.0",
+    "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.2",
@@ -30,9 +32,8 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
     "react-native-svg": "15.12.1",
-    "expo-document-picker": "~14.0.7"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
