--- a/abe/package.json
+++ b/abe/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@supabase/supabase-js": "^2.78.0",
     "expo": "^54.0.0",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
@@ -33,6 +35,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
