--- a/abe/package.json
+++ b/abe/package.json
@@ -18,7 +18,9 @@
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "@supabase/supabase-js": "^2.78.0",
+    "@supabase/supabase-js": "^2.81.0",
+    "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.3",
     "expo": "^54.0.0",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
