--- a/abe/package.json
+++ b/abe/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@supabase/supabase-js": "^2.81.0",
+    "baseline-browser-mapping": "^2.8.28",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "expo": "^54.0.0",
