--- a/abe/package.json
+++ b/abe/package.json
@@ -13,7 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/native": "^7.1.6",
@@ -22,30 +22,32 @@
     "baseline-browser-mapping": "^2.8.28",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
-    "expo": "^54.0.0",
+    "expo": "^54.0.23",
     "expo-document-picker": "~14.0.7",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.2",
-    "expo-splash-screen": "~31.0.9",
+    "expo-router": "~6.0.14",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-reanimated": "~4.1.0",
+    "react-native": "^0.81.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.15.0",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.1.10",
     "jest": "~29.7.0",
-    "jest-expo": "^54.0.0",
+    "jest-expo": "~54.0.13",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.9.2"
   },
